--- a/css/contentCss/contentCss.css
+++ b/css/contentCss/contentCss.css
@@ -7,7 +7,8 @@
     box-sizing: border-box;
 }
 
-._1enh._7q1s,
+
+/* ._1enh._7q1s,
 ._673w._6ynl,
 ._4_j5 {
     backdrop-filter: blur(10px);
@@ -73,4 +74,4 @@
 
 ._1htf {
     color: white !important;
-}
+} */
