--- a/scss/popup/index.scss
+++ b/scss/popup/index.scss
@@ -3,6 +3,7 @@ $blue-color: rgb(0, 206, 178);
 $background-smoke: #f0f0f0;
 body {
     background-color: $background-smoke;
+    position: relative;
     .container {
         width: 400px;
         padding: 10px;
