--- a/scss/popup/index.scss
+++ b/scss/popup/index.scss
@@ -2,6 +2,7 @@ $pink-color: #d9828e;
 $blue-color: rgb(0, 206, 178);
 $background-smoke: #f0f0f0;
 body {
+    height: auto;
     background-color: $background-smoke;
     position: relative;
     .container {
@@ -16,25 +17,6 @@ body {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            select,
-            input {
-                width: 200px;
-                height: 35px;
-                padding: 0 5px 0 5px;
-                border: none;
-                border-radius: 5px;
-                box-shadow: 1px 1px 20px 1px $background-smoke;
-                transition: box-shadow .5s;
-            }
-            select:focus,
-            input:focus {
-                border: $blue-color 2px solid !important;
-                outline: none;
-                box-shadow: 1px 1px 7px $blue-color !important;
-            }
-            label {
-                margin-bottom: 0;
-            }
         }
         .preview {
             width: 50%;
