--- a/css/ex/common.css
+++ b/css/ex/common.css
@@ -10,7 +10,6 @@
 }
 
 body {
-  background-image: url("https://www.yourtrainingedge.com/wp-content/uploads/2019/05/background-calm-clouds-747964.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -39,10 +38,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-transition: border .5s, background .5s, margin .5s, -webkit-box-shadow .5s;
-  transition: border .5s, background .5s, margin .5s, -webkit-box-shadow .5s;
-  transition: border .5s, box-shadow .5s, background .5s, margin .5s;
-  transition: border .5s, box-shadow .5s, background .5s, margin .5s, -webkit-box-shadow .5s;
+  -webkit-transition: border 0.5s, background 0.5s, margin 0.5s, -webkit-box-shadow 0.5s;
+  transition: border 0.5s, background 0.5s, margin 0.5s, -webkit-box-shadow 0.5s;
+  transition: border 0.5s, box-shadow 0.5s, background 0.5s, margin 0.5s;
+  transition: border 0.5s, box-shadow 0.5s, background 0.5s, margin 0.5s, -webkit-box-shadow 0.5s;
 }
 
 .m-nav .l-btn:hover {
@@ -70,5 +69,32 @@ body {
   border: none;
   background-color: #d9828e;
   cursor: pointer;
+}
+
+select,
+input {
+  width: 200px;
+  height: 35px;
+  padding: 0 5px 0 5px;
+  border: none;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 20px 1px #f0f0f0;
+          box-shadow: 1px 1px 20px 1px #f0f0f0;
+  -webkit-transition: -webkit-box-shadow 0.5s;
+  transition: -webkit-box-shadow 0.5s;
+  transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s, -webkit-box-shadow 0.5s;
+}
+
+select:focus,
+input:focus {
+  border: #00ceb2 2px solid !important;
+  outline: none;
+  -webkit-box-shadow: 1px 1px 7px #00ceb2 !important;
+          box-shadow: 1px 1px 7px #00ceb2 !important;
+}
+
+label {
+  margin-bottom: 0;
 }
 /*# sourceMappingURL=common.css.map */
