--- a/css/ex/imageIdPage.css
+++ b/css/ex/imageIdPage.css
@@ -62,4 +62,4 @@ input:focus {
 label {
   margin-bottom: 0;
 }
-/*# sourceMappingURL=friend.css.map */
+/*# sourceMappingURL=imageIdPage.css.map */
